--- a/data/VISUALIZATION/supersmart.html
+++ b/data/VISUALIZATION/supersmart.html
@@ -22,14 +22,14 @@
                         x2="100%" y2="0%"
                         spreadMethod="pad">
                     <stop offset="0%"   stop-color="#000000" stop-opacity="1"/>
-                    <stop offset="100%" stop-color="#FFFFFF" stop-opacity="1"/>
+                    <stop offset="100%" stop-color="#FFFFFF" stop-opacity="0"/>
                 </linearGradient>
                 <linearGradient
                         id="fadeLeft"
                         x1="0%" y1="0%"
                         x2="100%" y2="0%"
                         spreadMethod="pad">
-                    <stop offset="0%"   stop-color="#FFFFFF" stop-opacity="1"/>
+                    <stop offset="0%"   stop-color="#FFFFFF" stop-opacity="0"/>
                     <stop offset="100%" stop-color="#000000" stop-opacity="1"/>
                 </linearGradient>
             </defs>
@@ -57,6 +57,28 @@
                 rect {
                     fill: white;
                     stroke: black;
+                }
+                th, td {
+                    text-align: left;
+                    font: 10px Verdana;
+                    padding-left: 5px;
+                    padding-right: 5px
+                }
+                th {
+                    padding-top: 5px;
+                    padding-bottom: 5px;
+                }
+                th.widget {
+                    text-align: right;
+                    background-color: navy;
+                }
+                table {
+                    background-color: white;
+                    border: 1px solid black;
+                    padding-bottom: 5px;
+                    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.44);
+                    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.44);
+                    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.44);
                 }
             </style>
             <script type="text/javascript">
