--- a/data/VISUALIZATION/supersmart.html
+++ b/data/VISUALIZATION/supersmart.html
@@ -62,7 +62,8 @@
                     text-align: left;
                     font: 10px Verdana;
                     padding-left: 5px;
-                    padding-right: 5px
+                    padding-right: 5px;
+                    white-space: nowrap;
                 }
                 th {
                     padding-top: 5px;
@@ -71,6 +72,7 @@
                 th.widget {
                     text-align: right;
                     background-color: navy;
+                    vertical-align: middle
                 }
                 table {
                     background-color: white;
